Fixed header mobile navigation Added animations for search and nav on mobile devices

--- a/source/assets/css/content/_search.scss
+++ b/source/assets/css/content/_search.scss
@@ -42,7 +42,7 @@ a.search__cat-title {
 	right: $searchbarPadding + 8px;
 
 	width: 17px;
-	height: 9px;
+	height: 10px;
   }
 
   .widg_searchpage & {
@@ -108,7 +108,7 @@ a.search__cat-title {
 	  opacity: 0;
 
 	  width: 17px;
-	  height: 9px;
+	  height: 10px;
 
 	  right: 16px;
 	  top: 50%;
