--- a/source/widgets/navigation/navigation.scss
+++ b/source/widgets/navigation/navigation.scss
@@ -327,6 +327,8 @@ for better overview they are seperated here
 		transition: all $transitionLength $transitionEase;
 		overflow-y: scroll;
 
+		margin-top: 0;
+
 		position: absolute;
 		top: 0;
 		padding-top: $basicPush * 4;
