--- a/source/widgets/subnav/subnav.scss
+++ b/source/widgets/subnav/subnav.scss
@@ -167,7 +167,7 @@
 				transform: translateY(-50%);
 
 				width: 17px;
-				height: 9px;
+				height: 10px;
 			}
 
 			&.is_back {
